--- a/app/static/css/layout_sidebar.css
+++ b/app/static/css/layout_sidebar.css
@@ -30,6 +30,25 @@
     border-radius: .25rem;
 }
 
+@media screen and (max-width: 500px) {
+    #sidebar-fixed {
+        width: 100% !important;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    #sidebar-fixed {
+        min-width: 40%;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    .row-offcanvas-left {
+        min-width: 17%;
+    }
+
+}
+
 @media screen and (max-width: 1024px) {
 
     .h-20 {
