--- a/app/static/css/layout_top_navbar.css
+++ b/app/static/css/layout_top_navbar.css
@@ -22,7 +22,9 @@ footer {
 #navar-right {
     margin-right: 30px;
 }
-
+.navbar-brand{
+    margin-right: 0!important;
+}
 .content {
     margin-left: 0;
     flex-basis: 0;
